# rex_store

./: .gitignore  Cargo.toml  README.md  config.exs  mix.exs
lib/: ex_store.ex
lib/ex_store/: application.ex  cluster_manager.ex  request_router.ex
lib/ex_store/consistency/: behaviour.ex  eventual_controller.ex
lib/ex_store/storage/: engine.ex
src/: config.rs  gossip.rs  kvstore.rs  lib.rs  main.rs  network.rs  ring.rs  vector_clock.rs
src/gossip/: actor.rs  tcp.rs
test/: ex_store_test.exs  test_helper.exs
test/config/: test.exs
test/ex_store/: cluster_manager_test.exs  cluster_ring_test.exs
test/ex_store/storage/: engine_test.exs
