[package]
name = "rex_store"
version = "0.1.0"
edition = "2024"

default-run = "rex_store"

[dependencies]
actix = "0.13.5"
actix-rt = "2.10.0"
actix-web = "4.10.2"
anyhow = "1.0.98"
bytes = "1.10.1"
clap = { version = "4.5.36", features = ["derive"] }
core_affinity = "0.8.3"
ctrlc = "3.4.6"
futures = "0.3.31"
hashbrown = { version = "0.15.2", features = ["serde"] }
hashring = "0.3.6"
hwloc2 = "2.2.0"
num_cpus = "1.16.0"
rand = "0.9.0"
reqwest = { version = "0.12.15", features = ["json"] }
rustyline = "15.0.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = { version = "1.16.0", features = ["v4"] }
